web/static/mobile_survey/css/mobile.scss
// ------- mobile --------------
$primarycolor: rgb(102,72,162);
$navbarBackground: rgb(102,72,162);
$progressBarBackground: rgb(179,164,209);
$progressBarFill: rgb(251,154,0);

$white: rgb(255,255,255);
$black: rgb(0,0,0);
$grey: #cecece;


/* THIS FILE IS ONLY FOR TESTING PURPOSES. TO CHECK THAT EVERYTHING WRITTEN HERE IS COMPILED AS SPECIFIED ON brunch-config.js */

html {
  line-height: 1.5;
  font-family: 'Roboto', 'San Francisco', Helvetica, Arial, sans-serif;
  font-weight: normal;
}
h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
  line-height: 1;
}


body {
  margin: 0;
  padding: 0;
}
nav {
  background-color: $navbarBackground;
  color: $white;
  padding: 1rem 2rem;
  position: relative;
}
.progressBar {
  background: $progressBarBackground;
  line-height: 0;
  height: 10px;
  position: absolute;
  left: 0;
  bottom: -10px;
  width: 100%;
  span {
    background: $progressBarFill;
    height: 100%;
    display: inline-block;
    position: relative;
  }
}
main {
  font-size: 1.2rem;
  padding: 2rem 2.6rem;
}
.prompt {
  min-height: 150px;
  margin-bottom: 2rem;
}
h1 {
  font-size: 1.3rem;
  line-height: 1.4;
}
.btn {
  display: inline-block;
  background: $white;
  font-size: 1.6rem;
  color: $primarycolor;
  text-transform: uppercase;
  border: 3px solid $primarycolor;
  border-radius: 4px;
  padding: .8rem .4rem;
  margin: 1rem .2rem;

  svg {
    fill: $primarycolor;
    transform: scale(1.5);
  }

  &:disabled {
    color: $grey;
    border-color: $grey;
    svg {
      fill: $grey;
    }
  }

  &.block {
    width: 100%;
    display: block;
    margin: 1rem 0;

    + .btn.block {
      margin-top: 2.5rem;
    }
  }
  &.square {
    width: 5rem;
    height: 5rem;
  }
  &:focus {
    outline: none;
  }
}
input[type=number],
input[type=email],
input[type=text] {
  border: none;
  border-bottom: 2px solid rgb(170,170,170);
  min-width: 90px;
  height: 4rem;
  &:focus {
    outline: none;
  }
}
input[type=number] {
  font-size: 2rem;
  &.error {
    border-bottom: 1px solid #ff5722;
  }
}
select {
  display: block;
  width: 100%;
  height: 2rem;
  border: 2px solid $primarycolor;
  margin: .8rem 0 1.3rem;
}
.input-button-inline {
  input {
    width: 60%;
  }
  .btn {
    float: right;
  }
  &:after {
    content: '';
    display: table;
    clear: both;
    zoom: 1;
  }
}
.refusal {
  position: absolute;
  text-align: center;
  bottom: 30px;
  left: 0;
  width: 100%;
  a {
    font-weight: 300;
    color: #999999;
    text-decoration: none;
    i {
      fill: #999999;
      margin-right: 8px;
      display: inline-block;
      vertical-align: middle;
    }
  }
}

// FONT-SIZE related with buttons of multiple choice steps

.choice-length-less-7{
  font-size: 1.6rem;
}

.choice-length-less-14{
  font-size: 1.45rem;
}

.choice-length-less-20{
  font-size: 1.3rem;
}

.choice-length-less-40{
  font-size: 1.15rem;
}

.choice-length-less-60{
  font-size: 1.0rem;
}

.choice-length-large{
  font-size: 0.8rem;
}

.error-message {
  color: #ff5722;
  font-size: 1rem;
}

.more-content-arrow {
  display: none;
  position: fixed;
  bottom: 0;
  right: 0;
  animation: jump 1s infinite;
  background-image: url("../images/ic_arrow_downward.svg");
  width: 2.4rem;
  height: 2.4rem;
}

@keyframes jump {
    0% { transform: translateY(-100%) }
    50% { transform: translateY(0) }
    100% { transform: translateY(-100%) }
  } 

